# Copyright (c) Huawei Technologies Co., Ltd. 2019. All rights reserved.

static_library("lwip2") {
    defines = []

    sources = [
        "src/arch/perf.c",
        "src/arch/sys_arch.c",
        "src/api/api_lib.c",
        "src/api/api_msg.c",
        "src/api/api_shell.c",
        "src/api/err.c",
        "src/api/ethtool.c",
        "src/api/if.c",
        "src/api/netbuf.c",
        "src/api/netdb.c",
        "src/api/netifapi.c",
        "src/api/sockets.c",
        "src/api/tcpip.c",
        "src/core/debug.c",
        "src/core/dns.c",
        "src/core/inet_chksum.c",
        "src/core/ip.c",
        "src/core/mem.c",
        "src/core/netif.c",
        "src/core/raw.c",
        "src/core/stats.c",
        "src/core/tcp.c",
        "src/core/tcp_out.c",
        "src/core/udp.c",
        "src/core/def.c",
        "src/core/filter.c",
        "src/core/init.c",
        "src/core/ip_addr.c",
        "src/core/memp.c",
        "src/core/pbuf.c",
        "src/core/sntp.c",
        "src/core/sys.c",
        "src/core/tcp_in.c",
        "src/core/tcp_sack.c",
        "src/core/timeouts.c",
        "src/core/ipv4/autoip.c",
        "src/core/ipv4/dhcp.c",
        "src/core/ipv4/dhcps.c",
        "src/core/ipv4/etharp.c",
        "src/core/ipv4/icmp.c",
        "src/core/ipv4/igmp.c",
        "src/core/ipv4/ip4.c",
        "src/core/ipv4/ip4_addr.c",
        "src/core/ipv4/ip4_frag.c",
        "src/core/ipv6/dhcp6.c",
        "src/core/ipv6/ethip6.c",
        "src/core/ipv6/icmp6.c",
        "src/core/ipv6/inet6.c",
        "src/core/ipv6/ip6.c",
        "src/core/ipv6/ip6_addr.c",
        "src/core/ipv6/ip6_frag.c",
        "src/core/ipv6/mld6.c",
        "src/core/ipv6/nd6.c",
        "src/netif/driverif.c",
        "src/netif/ethernet.c",
        "src/netif/ifaddrs.c",
        "src/netif/lowpan6.c",
    ]

    if (LOSCFG_NET_LWIP_SACK_TFTP) {
        sources += [
            "src/core/tftpc.c",
        ]
    }

    if (LOSCFG_TEST_LWIP) {
        defines += [
            "LWIP_TESTBED",
        ]
    }

    defines += [
        "LWIP_NOASSERT",
        "LWIP_SACK=1",
        "LWIP_WND_SCALE=0",
        "LWIP_CONFIG_FILE=\"lwip/lwipopts.h\"",
    ]

    include_dirs = [
        "include",
        "../mac",
    ]
}